# pg-heatmaps

./: .gitignore  Dockerfile  README.md  plantgenie.dbml  pyproject.toml
frontends/exheatmap/: package.json  vite.config.ts
frontends/exheatmap/src/: Models.ts  main.tsx
frontends/exheatmap/src/components/: ExperimentSelect.tsx  GeneListMaker.tsx  GeneTable.tsx  Heatmap.tsx  HeatmapTooltip.tsx  SpeciesSelect.tsx  SvgCanvas.tsx
frontends/exheatmap/src/hooks/: useClustering.ts  useHeatmap.ts  useMaxTextLength.ts
frontends/exheatmap/src/routes/: GeneTableDisplay.tsx  Heatmap.tsx  Index.tsx  ResponsiveHeatmap.tsx  Root.tsx
frontends/exheatmap/src/state/: AppStore.ts  SliceCreators.ts  SliceTypes.ts
frontends/exheatmap/src/utils/: Clustering.ts  Scalers.ts
plantgenie_heatmaps/: __init__.py  main.py  models.py
plantgenie_heatmaps/api/v1/genome/: routes.py
plantgenie_heatmaps/pg-react-frontend/: .dockerignore  package.json
plantgenie_heatmaps/react-frontend/: package.json  vite.config.ts
plantgenie_heatmaps/react-frontend/src/: index.css  main.tsx
plantgenie_heatmaps/react-frontend/src/components/: FileAttacher.tsx  SpeciesCard.tsx  SpeciesContent.tsx  SpeciesSelectMenu.tsx
plantgenie_heatmaps/sqlite_ddls/: gene_annotations_table.sql  gene_expression_table.sql  genome_table.sql  species_table.sql
react-frontend/src/: main.tsx
react-frontend/src/components/: SpeciesCard.tsx  SpeciesCardNoButton.tsx  SpeciesSelectMenu.tsx
react-frontend/src/state/: AppStore.ts  SliceCreators.ts  SliceTypes.ts
scripts/: run-server.sh
(+14 files in other folders)
